scss/login.scss
.d-modal.create-account,
.d-modal.login-modal {
  // Background
  &:before {
    content: "";
    height: 100vh;
    width: 100vw;
    background: $background-gradient;
    position: fixed;
    z-index: -1;
    animation: none;
  }

  // Signup form
  .login-form {
    position: relative;
    display: flex;
    overflow: visible;
    flex: 1;
    max-height: none;

    &:after,
    &:before {
      display: none;
    }

    form {
      padding: 0 24px;
      max-height: none;
    }
  }

  // Login form
  #login-form {
    margin: 0 auto;
    padding: 0 24px;
    width: 100%;

    td {
      padding-right: 0;
    }
  }

  .have-an-account {
    padding: 0 24px;
    width: 100%;
  }

  .modal-body,
  #credentials {
    display: flex;
    flex-direction: column;
    padding: 0;
  }

  // style to show the logo correctly at the top of the modal
  .modal-middle-container {
    &--logo {
      display: flex;
      align-items: center;
      justify-content: flex-start;
      flex-direction: column;
    }

    .dc-logo {
      padding: 1rem 0;

      img {
        height: 66px;
      }

      @include media-breakpoint-down(md) {
        padding: 0.5rem 0;

        img {
          height: 47px;
        }
      }
    }

    .modal-inner-container {
      animation: none;
      width: 440px;
      box-shadow: $card-box-shadow;
      position: relative;

      .modal-header {
        padding: 10px 0 0;
        border-bottom: none;

        .title {
          text-align: center;
          width: 100%;
        }

        .modal-close {
          position: fixed;
          top: 15px;
          right: 15px;
        }
      }

      .modal-body {
        max-height: none !important;

        .forgot-password {
          padding-top: 0.5rem;
          justify-content: flex-end;
        }

        #forgot-password-link {
          float: right;
        }
      }
    }
  }

  // Login button container
  .auth-footer {
    border-top: none;
    margin-top: 0.5rem;
    padding: 0 24px;
    position: relative;
    width: 100%;

    #login-button {
      width: 100%;
      text-align: center;
      // same value as the .btn class
      min-height: 40px;
    }

    // spinner to appear on top of button
    .loading-container {
      align-items: center;
      bottom: 0;
      display: flex;
      justify-content: center;
      left: 0;
      pointer-events: none;
      position: absolute;
      right: 0;
      top: 0;
    }
  }
  // this is the section with the social buttons
  .auth-social {
    width: 100%;
    padding-bottom: 1.5rem;

    .auth-social-buttons {
      #login-buttons {
        padding-top: 0;

        &:not(.hidden) {
          button {
            margin: 0.25rem 0;

            &:first-of-type {
              margin-top: 0;
            }
            &:last-of-type {
              margin-bottom: 0;
            }
          }
        }
      }
    }

    .auth-divider {
      width: 100%;
      text-align: center;
      margin: 1.5rem 0;
      height: 0px;

      hr {
        margin: 0;
      }

      small {
        position: relative;
        background: white;
        padding: 0 1rem;
        top: -12px;
      }
    }
  }
}

